--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "homepage": "https://bitbucket.org/nj1ers/portal2.0#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "uuid": "^3.3.2"
   },
