--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "json2csv": "^4.5.2",
+    "nouislider": "^14.0.2",
+    "socket.io": "*",
     "uuid": "^3.3.2",
-    "socket.io": "*"
+    "webpack": "^4.35.3",
+    "wnumb": "^1.1.0"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
