--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "homepage": "https://bitbucket.org/nj1ers/portal2.0#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "canvas-gauges": "^2.1.5",
     "express": "^4.17.1",
     "fast-csv": "^3.1.0",
     "json2csv": "^4.5.2",
