--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "canvas-gauges": "^2.1.5",
+    "dygraphs": "^2.1.0",
     "express": "^4.17.1",
     "fast-csv": "^3.1.0",
     "json2csv": "^4.5.2",
