--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.17.1",
     "fast-csv": "^3.1.0",
     "json2csv": "^4.5.2",
+    "nipplejs": "^0.8.2",
     "nouislider": "^14.0.2",
     "socket.io": "*",
     "uuid": "^3.3.2",
